--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ PORT=3000
 # Integration
 POKEAPI_URL=https://pokeapi.co/api/v2
 VIACEP_URL=https://viacep.com.br/ws
+
+# Auth
+JWT_SECRET=jwt_secret
+JWT_EXPIRES_IN=86400
